--- a/1-50.md
+++ b/1-50.md
@@ -51,3 +51,42 @@ https://www.examtopics.com/discussions/microsoft/view/119599-exam-az-104-topic-2
 Giải thích: nếu thực hiện read thì user này chỉ có thể read từ containers: blobs-example-container
 
 Ví dụ: user này thực hiện write, mệnh đề đầu tiên sẽ là !(false) => cả điều kiện true => người này vẫn có thể write bình thường
+
+###### Exam AZ-104 topic 3 question 66 discussion
+https://www.examtopics.com/discussions/microsoft/view/102146-exam-az-104-topic-3-question-66-discussion/
+
+Chỉ có Premium file shares (FileStorage), LRS/ZRS là hỗ trợ SMB Multichannel (improve performance)
+Giá rẻ thì chọn LRS
+
+###### Exam AZ-104 topic 3 question 61 discussion
+https://www.examtopics.com/discussions/microsoft/view/95611-exam-az-104-topic-3-question-61-discussion/
+
+If you define more than one action on the same blob, lifecycle management applies the least expensive action to the blob. For example, action delete is cheaper than action tierToArchive. Action tierToArchive is cheaper than action tierToCool
+
+###### Exam AZ-104 topic 3 question 59 discussion
+https://www.examtopics.com/discussions/microsoft/view/95603-exam-az-104-topic-3-question-59-discussion/
+
+Trong Storage account - container:
+Maximum number of Stored access policies is 5
+Maximum number of Immutable blob storage is 2
+
+=> Câu hỏi về số lượng tạo thêm, nên cần trừ đi số lượng đã tồn tại trên portal để ra đáp án
+
+###### Exam AZ-104 topic 3 question 33 discussion
+https://www.examtopics.com/discussions/microsoft/view/39155-exam-az-104-topic-3-question-33-discussion/
+
+SAS không thể sử dụng như password khi sử dụng command
+SAS is appended to the URI for an Azure Storage resource
+
+###### Exam AZ-104 topic 3 question 58 discussion
+https://www.examtopics.com/discussions/microsoft/view/95593-exam-az-104-topic-3-question-58-discussion/
+
+SAS giới hạn quyền cũng như resources tương tác - dựa trên chính xác các điều kiện cài đặt
+key: giống như root access key, cho phép full action (read/write) trên all resources (folder, container, table) của storage account
+
+###### Exam AZ-104 topic 5 question 21 discussion
+https://www.examtopics.com/discussions/microsoft/view/38433-exam-az-104-topic-5-question-21-discussion/
+
+Số lượng tối thiểu NSGs cần tạo để thỏa mãn connection giữa các VMs, nằm trên các subnet.
+Vì mỗi VMs đều có static IP, nên chỉ cần tạo 1 NSG và liên kết NSG này với các subnet.
+Các rule trong NSG sẽ cần chỉ cần chỉ rõ IP các VMs
