--- a/1-50.md
+++ b/1-50.md
@@ -90,3 +90,13 @@ https://www.examtopics.com/discussions/microsoft/view/38433-exam-az-104-topic-5-
 Số lượng tối thiểu NSGs cần tạo để thỏa mãn connection giữa các VMs, nằm trên các subnet.
 Vì mỗi VMs đều có static IP, nên chỉ cần tạo 1 NSG và liên kết NSG này với các subnet.
 Các rule trong NSG sẽ cần chỉ cần chỉ rõ IP các VMs
+
+###### Exam AZ-104 topic 2 question 65 discussion
+https://www.examtopics.com/discussions/microsoft/view/93799-exam-az-104-topic-2-question-65-discussion/
+
+Sử dụng Bulk invite để tạo nhiều guest user, thì file CSV cần có các trường thông tin
+- Email address to invite - the user who will receive an invitation
+- Redirection url - the URL to which the invited user is forwarded after accepting the invitation.
+
+File CSV trong đề bài chỉ có name và email, nên sẽ không hợp lệ để sử dụng tính năng Bulk invite
+
