--- a/1-50.md
+++ b/1-50.md
@@ -100,3 +100,21 @@ Sử dụng Bulk invite để tạo nhiều guest user, thì file CSV cần có 
 
 File CSV trong đề bài chỉ có name và email, nên sẽ không hợp lệ để sử dụng tính năng Bulk invite
 
+###### Exam AZ-104 topic 4 question 102 discussion
+https://www.examtopics.com/discussions/microsoft/view/125320-exam-az-104-topic-4-question-102-discussion/
+
+Dùng template để deploy 3 RG: 0, 1, 2
+Trong RG1 tạo locks: can not delete => có thể deploy new VM
+Trong RG2 tạo locks: read only => không thể modify, không thể deploy new VM
+
+###### Exam AZ-104 topic 4 question 98 discussion
+https://www.examtopics.com/discussions/microsoft/view/119631-exam-az-104-topic-4-question-98-discussion/
+
+Cấu hình để WebApp sử dụng wildcard cert đang lưu ở Key vault
+=> Enable managed user identity on App1
+
+###### Exam AZ-104 topic 2 question 2 discussion
+https://www.examtopics.com/discussions/microsoft/view/75852-exam-az-104-topic-2-question-2-discussion/
+
+Grant access to AKS cho các user thuộc một tenant
+=> OpenID Connect, OAuth 2.0 protocal
