--- a/1-50.md
+++ b/1-50.md
@@ -1,10 +1,8 @@
-###### Exam AZ-104 topic 5 question 109 discussion
-https://www.examtopics.com/discussions/microsoft/view/94044-exam-az-104-topic-5-question-109-discussion/
+[Exam AZ-104 topic 5 question 109 discussion](https://www.examtopics.com/discussions/microsoft/view/94044-exam-az-104-topic-5-question-109-discussion/)
 
 => The firewall, VNet, and the public IP address all must be in the same resource group, region.
 
-###### Exam AZ-104 topic 2 question 31 discussion
-https://www.examtopics.com/discussions/microsoft/view/62981-exam-az-104-topic-2-question-31-discussion/
+[Exam AZ-104 topic 2 question 31 discussion](https://www.examtopics.com/discussions/microsoft/view/62981-exam-az-104-topic-2-question-31-discussion/)
 
 Đưa ra các group với group type, membership type khác nhau.
 Tạo user với các cấu hình.
@@ -13,8 +11,7 @@ Hỏi xem user đó thuộc group nào?
 => Chỉ có membership là "Dynamic user" mới tự động thêm các user thỏa mãn điều vào group.
 => Membership "Assigned" cần phải thêm thủ công. Nên các user chắc chắn sẽ không tự chui vào group này được
 
-###### Exam AZ-104 topic 4 question 95 discussion
-https://www.examtopics.com/discussions/microsoft/view/119710-exam-az-104-topic-4-question-95-discussion/
+[Exam AZ-104 topic 4 question 95 discussion](https://www.examtopics.com/discussions/microsoft/view/119710-exam-az-104-topic-4-question-95-discussion/)
 
 Có sẵn 2 RG ở 2 location.
 Có 1 template dùng để tạo 4 RG, có chỉ định location trong file, có 2 RG bị trùng tên
@@ -23,8 +20,7 @@ Dùng command deploy template nhưng truyền param Location khác với trong f
 => Trong cùng subscription, RG không thể tạo trùng tên, nên mặc dù template define 4 cái RG thì chỉ tạo được 2
 => RG được tạo ra sẽ sử dụng location được khai báo trong file, NOT from command param
 
-###### Exam AZ-104 topic 5 question 79 discussion
-https://www.examtopics.com/discussions/microsoft/view/63586-exam-az-104-topic-5-question-79-discussion/
+[Exam AZ-104 topic 5 question 79 discussion](https://www.examtopics.com/discussions/microsoft/view/63586-exam-az-104-topic-5-question-79-discussion/)
 
 Connect site-to-site, sử dụng Azure virtual WAN. Site-2-site có thể là giữa các datacenters, hoặc giữa datacenter với virtual network
 Các step:
@@ -34,8 +30,7 @@ Các step:
 4. Connect VPN sites to virtual hub
 5. Connect a VNet to the virtual hub (trong câu này thì không áp dụng cho VNet, nên step này không cần)
 
-###### Exam AZ-104 topic 2 question 93 discussion
-https://www.examtopics.com/discussions/microsoft/view/119599-exam-az-104-topic-2-question-93-discussion/
+[Exam AZ-104 topic 2 question 93 discussion](https://www.examtopics.com/discussions/microsoft/view/119599-exam-az-104-topic-2-question-93-discussion/)
 
     (
         (
@@ -52,19 +47,16 @@ Giải thích: nếu thực hiện read thì user này chỉ có thể read từ
 
 Ví dụ: user này thực hiện write, mệnh đề đầu tiên sẽ là !(false) => cả điều kiện true => người này vẫn có thể write bình thường
 
-###### Exam AZ-104 topic 3 question 66 discussion
-https://www.examtopics.com/discussions/microsoft/view/102146-exam-az-104-topic-3-question-66-discussion/
+[Exam AZ-104 topic 3 question 66 discussion](https://www.examtopics.com/discussions/microsoft/view/102146-exam-az-104-topic-3-question-66-discussion/)
 
 Chỉ có Premium file shares (FileStorage), LRS/ZRS là hỗ trợ SMB Multichannel (improve performance)
 Giá rẻ thì chọn LRS
 
-###### Exam AZ-104 topic 3 question 61 discussion
-https://www.examtopics.com/discussions/microsoft/view/95611-exam-az-104-topic-3-question-61-discussion/
+[Exam AZ-104 topic 3 question 61 discussion](https://www.examtopics.com/discussions/microsoft/view/95611-exam-az-104-topic-3-question-61-discussion/)
 
 If you define more than one action on the same blob, lifecycle management applies the least expensive action to the blob. For example, action delete is cheaper than action tierToArchive. Action tierToArchive is cheaper than action tierToCool
 
-###### Exam AZ-104 topic 3 question 59 discussion
-https://www.examtopics.com/discussions/microsoft/view/95603-exam-az-104-topic-3-question-59-discussion/
+[Exam AZ-104 topic 3 question 59 discussion](https://www.examtopics.com/discussions/microsoft/view/95603-exam-az-104-topic-3-question-59-discussion/)
 
 Trong Storage account - container:
 Maximum number of Stored access policies is 5
@@ -72,27 +64,23 @@ Maximum number of Immutable blob storage is 2
 
 => Câu hỏi về số lượng tạo thêm, nên cần trừ đi số lượng đã tồn tại trên portal để ra đáp án
 
-###### Exam AZ-104 topic 3 question 33 discussion
-https://www.examtopics.com/discussions/microsoft/view/39155-exam-az-104-topic-3-question-33-discussion/
+[Exam AZ-104 topic 3 question 33 discussion](https://www.examtopics.com/discussions/microsoft/view/39155-exam-az-104-topic-3-question-33-discussion/)
 
 SAS không thể sử dụng như password khi sử dụng command
 SAS is appended to the URI for an Azure Storage resource
 
-###### Exam AZ-104 topic 3 question 58 discussion
-https://www.examtopics.com/discussions/microsoft/view/95593-exam-az-104-topic-3-question-58-discussion/
+[Exam AZ-104 topic 3 question 58 discussion](https://www.examtopics.com/discussions/microsoft/view/95593-exam-az-104-topic-3-question-58-discussion/)
 
 SAS giới hạn quyền cũng như resources tương tác - dựa trên chính xác các điều kiện cài đặt
 key: giống như root access key, cho phép full action (read/write) trên all resources (folder, container, table) của storage account
 
-###### Exam AZ-104 topic 5 question 21 discussion
-https://www.examtopics.com/discussions/microsoft/view/38433-exam-az-104-topic-5-question-21-discussion/
+[Exam AZ-104 topic 5 question 21 discussion](https://www.examtopics.com/discussions/microsoft/view/38433-exam-az-104-topic-5-question-21-discussion/)
 
 Số lượng tối thiểu NSGs cần tạo để thỏa mãn connection giữa các VMs, nằm trên các subnet.
 Vì mỗi VMs đều có static IP, nên chỉ cần tạo 1 NSG và liên kết NSG này với các subnet.
 Các rule trong NSG sẽ cần chỉ cần chỉ rõ IP các VMs
 
-###### Exam AZ-104 topic 2 question 65 discussion
-https://www.examtopics.com/discussions/microsoft/view/93799-exam-az-104-topic-2-question-65-discussion/
+[Exam AZ-104 topic 2 question 65 discussion](https://www.examtopics.com/discussions/microsoft/view/93799-exam-az-104-topic-2-question-65-discussion/)
 
 Sử dụng Bulk invite để tạo nhiều guest user, thì file CSV cần có các trường thông tin
 - Email address to invite - the user who will receive an invitation
@@ -100,21 +88,46 @@ Sử dụng Bulk invite để tạo nhiều guest user, thì file CSV cần có 
 
 File CSV trong đề bài chỉ có name và email, nên sẽ không hợp lệ để sử dụng tính năng Bulk invite
 
-###### Exam AZ-104 topic 4 question 102 discussion
-https://www.examtopics.com/discussions/microsoft/view/125320-exam-az-104-topic-4-question-102-discussion/
+[Exam AZ-104 topic 4 question 102 discussion](https://www.examtopics.com/discussions/microsoft/view/125320-exam-az-104-topic-4-question-102-discussion/)
 
 Dùng template để deploy 3 RG: 0, 1, 2
 Trong RG1 tạo locks: can not delete => có thể deploy new VM
 Trong RG2 tạo locks: read only => không thể modify, không thể deploy new VM
 
-###### Exam AZ-104 topic 4 question 98 discussion
-https://www.examtopics.com/discussions/microsoft/view/119631-exam-az-104-topic-4-question-98-discussion/
+[Exam AZ-104 topic 4 question 98 discussion](https://www.examtopics.com/discussions/microsoft/view/119631-exam-az-104-topic-4-question-98-discussion/)
 
 Cấu hình để WebApp sử dụng wildcard cert đang lưu ở Key vault
 => Enable managed user identity on App1
 
-###### Exam AZ-104 topic 2 question 2 discussion
-https://www.examtopics.com/discussions/microsoft/view/75852-exam-az-104-topic-2-question-2-discussion/
+[Exam AZ-104 topic 2 question 2 discussion](https://www.examtopics.com/discussions/microsoft/view/75852-exam-az-104-topic-2-question-2-discussion/)
 
 Grant access to AKS cho các user thuộc một tenant
-=> OpenID Connect, OAuth 2.0 protocal
+=> OpenID Connect, OAuth 2.0 protocol
+
+[Exam AZ-104 topic 4 question 6 discussion](https://www.examtopics.com/discussions/microsoft/view/38288-exam-az-104-topic-4-question-6-discussion/)
+
+Ngăn chặn password lưu trữ ở dạng plain text
+=> Azure Key vault and access policy
+
+
+[Exam AZ-104 topic 4 question 49 discussion](https://www.examtopics.com/discussions/microsoft/view/38248-exam-az-104-topic-4-question-49-discussion/)
+
+Availability set - Within data centre - configure update domains and fault domains
+Availability zone - Within region (usually three data centres per region)
+
+=> mỗi VM nằm ở 1 AZ là ngon nhất
+
+[Exam AZ-104 topic 1 question 27 discussion](https://www.examtopics.com/discussions/microsoft/view/57495-exam-az-104-topic-1-question-27-discussion/)
+
+Mở kết nối cho 1 nhân viên làm việc remote tới mạng công ty
+=> Point to site VPN (P2S)
+
+[Exam AZ-104 topic 4 question 50 discussion](https://www.examtopics.com/discussions/microsoft/view/38276-exam-az-104-topic-4-question-50-discussion/)
+
+Dùng tempalte để deploy thì cần nhập thông tin gì?
+=> Resouces group và Administrator username
+
+[Exam AZ-104]()
+URL của một file nằm trong Storage account (Container) là gì?
+=>  <storage-account>.blob.core.windows.net/<container>/<file>
+
